# livescript

./: CMakeLists.txt  package-lock.json
livescript/: dub.json  livescript.dlangidews  livescript.dlangidews.wssettings
livescript/source/allhumanity/: machines.d
livescript/source/lives/: allhumanity.d
livescript/source/machines/: allhumanity.d
livescript/source/process/: extprocess.d
livescript/source/scripts/: dogscripts.d
livescript/source/tools/: cutebuffer.d
matrix/gnu/test/: CMakeLists.txt  package.json
scripts/laps/: layout.cpp  layout.h
scripts/laps/info/: doginfo.cpp  doginfo.h
scripts/laps/info/appenders/: statics.cpp  statics.h
scripts/laps/info/festpopulation/carnival/: blocking.cpp  blocking.h
scripts/lives/connect/: scripts.cpp  scripts.h
